--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "element-plus": "^2.7.7",
     "firebase": "^10.12.4",
     "pinia": "^2.1.7",
+    "pinia-plugin-persist": "^1.0.0",
+    "sweetalert2": "^11.14.4",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
